--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "bootstrap": "^3.3.6",
     "expose-loader": "^0.7.1",
     "flux": "^2.1.1",
     "html-webpack-plugin": "https://github.com/sandeep45/html-webpack-plugin.git",
